# Olivia

./: .env  CLI overrides  DEV_NOTES_OLIVIA.md  Evaluate  Live Paper  Walk-forward (stub)  __init__.py  cli.py  metrics.py  position.py  pyproject.toml  report.py
.github/workflows/: olivia.yml
backtest/: datasets.py  engine.py
config/: olivia.yaml
data/: features.py
docs/: olivia_quickstart.md
exec/: broker_iface.py  init.py  mt5_adapter.py  paper_alpaca.py
olivia/: cli.py  config.py
olivia/exec/: mt5_adapter.py
olivia/olivia/: risk.py
strategies/: ema_vwap_scalp.py
tests/olivia/: test_features.py  test_mt5_adapter_stub.py  test_position_sizing.py  test_signals.py
