[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wolfe-olivia"
version = "0.1.0"
description = "Olivia additive trading module (EMA+VWAP scalp)"
authors = [{name = "Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "tabulate>=0.9",
  "matplotlib>=3.8"
]

[project.scripts]
olivia = "olivia.cli:main"

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["."]
addopts = "-q"

[project.scripts]
olivia = "olivia.cli:main"
